# ALTensor

./: CMakeLists.txt  README.md  main.cpp
include/: LR.h  deriv.h  ndarray.h
scripts/: lr_test.py
src/: CMakeLists.txt  deriv.cpp
src/regression/: CMakeLists.txt  LR.cpp
